// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="App"
>
  <h2>
    Hello, World!
  </h2>
  <hr />
  <div
    className="form__wrapper"
  >
    <form
      onSubmit={[Function]}
    >
      Search
      <input
        onChange={[Function]}
        type="text"
        value="hooks"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <hr />
  <div
    className="list__display"
  >
    <nav
      className="sc-bdVaJa kzUpol"
    >
      <ul>
        <li>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Title
          </button>
        </li>
        <li>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Author
          </button>
        </li>
        <li>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Comments
          </button>
        </li>
        <li>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Points
          </button>
        </li>
        <li>
          Archive
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="interactions"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has valid snapshot 1`] = `
<div
  className="form__wrapper"
>
  <form>
    Search
    <input
      type="text"
    />
    <button
      type="submit"
    >
      Search
    </button>
  </form>
</div>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="list__display"
>
  <nav
    className="sc-bdVaJa kzUpol"
  >
    <ul>
      <li>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </li>
      <li>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </li>
      <li>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </li>
      <li>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </li>
      <li>
        Archive
      </li>
    </ul>
  </nav>
  <ul
    className="table-row"
  >
    <li>
      <a>
        1
      </a>
    </li>
    <li>
      1
    </li>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      <button
        className="1"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </li>
  </ul>
  <ul
    className="table-row"
  >
    <li>
      <a>
        2
      </a>
    </li>
    <li>
      2
    </li>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      <button
        className="2"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </li>
  </ul>
</div>
`;
